--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body> 
-		<h1>Best Vacation Planner</h1>
+		<h1>Best Vacation Planner.</h1>
 
 		<p>This is an online website that you can use to plan your vacation anywhere in the world. You can search for places you want to visit, resturants to try, and things to do with Trip It. 
 		</p>
