--- a/unit_4 /index.html
+++ b/unit_4 /index.html
@@ -4,6 +4,7 @@
 		<title>TRIP IT
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		@import url('https://fonts.googleapis.com/css?family=Open+Sans|Rancho');
 	</head>
 
 	<body>
